# AzureMiddleware

./: .gitignore  README.md  config.example.yaml  local.example.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md  spec.md
azure_middleware/: __init__.py  __main__.py  config.py  decrypt.py  dependencies.py  server.py
azure_middleware/auth/: __init__.py  aad.py  apikey.py  local.py
azure_middleware/cost/: __init__.py  calculator.py  tracker.py
azure_middleware/logging/: __init__.py  encryption.py  writer.py
azure_middleware/routes/: __init__.py  chat.py  embeddings.py  health.py  models.py  responses.py
azure_middleware/streaming/: __init__.py  buffer.py
examples/notebooks/: api_requests_examples.ipynb
specs/master/: batch-logging-implementation.md  batch-logging.md  data-model.md  plan.md  quickstart.md  research.md  tasks.md  testing-guide.md
specs/master/contracts/: config-schema.md  openapi.yaml
tests/: conftest.py  manual_batch_test.py  test_batch_logging.py  test_logging_concurrency.py
tests/integration/: README.md  __init__.py  conftest.py  test_multimodel.py  test_openai_client.py  test_thinking.py
